2007-08-12  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/striso.texi: GPLv3
	* src/drivers/clns-ip.c: two new driver implementations
	* src/drivers/clns-udp.c: two new driver implementations

2007-08-03  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/striso.refs: updated references

2007-07-21  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/news.texi: release notes update

2007-07-14  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/clns.c: make license explicit
	* src/drivers/tp.c: make license explicit
	* src/modules/itot.c: make license explicit
	* src/modules/tcpns.c: make license explicit

2007-06-25  Brian Bidulock  <bidulock@openss7.org>

	* .pkgrelease: bumped release numbers
	* debian/changelog: bumped release numbers
	* doc/manual/news.texi: bumped release numbers

2007-06-24  Brian Bidulock  <bidulock@openss7.org>

	* striso.spec.in: recognize EL4 and EL5 for kernel-develop

2007-06-23  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/news.texi: updates for release

2007-06-22  Brian Bidulock  <bidulock@openss7.org>

	* striso.spec.in: netconfig respects libtirpc

2007-06-21  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/todo.texi: doc updates for release

2007-06-20  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/news.texi: new distro/kernel support
	* doc/manual/prerequisites.texi: new distro/kernel support
	* striso.spec.in: recognize Fedora 7 kernels

2007-06-16  Brian Bidulock  <bidulock@openss7.org>

	* configure.nexusware: remove any later language
	* src/include/sys/lapb_ioctl.h: remove any later language

2007-05-18  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release

	* debian/striso-core.preinst.in: corrected array subscript syntax error
	* debian/striso-core.prerm.in: corrected array subscript syntax error