@@ -3211,12 +3211,29 @@ Part 1: Protocol Specification
 %D 1995
 %I International Organization for Standardization
 
+%K iso8881
+%L ISO 8881
+%R ISO/IEC 8881:1989
+%A ISO/IEC
+%Q International Organization for Standardization
+%T Information Processing Systems \(em Data Communications \(em Use of the X.25 Packet Level Protocol in Local Area Networks
+%D 1989
+%I International Organization for Standardization
+
 %K iso9542
 %L ISO/IEC 9542
 %A ISO
 %R ISO/IEC 9542 : 1988
 %T Information Processing Systems \- Telecommunications and Information Exchange between Systems \- End System to Intermediate System Routeing Exchange Protocol for use in Conjunction with the Protocol Routeing for Providing the Connectionless-Mode Network Service (ISO 8473)
 %D 1988
+%I International Organization for Standardization
+
+%K iso10030
+%L ISO/IEC 10030
+%A ISO
+%R ISO/IEC 10030 : 1995
+%T Information Processing Systems \- Telecommunications and Information Exchange between Systems \- End System Routeing Information Exchange Protocol for use in conjunction with ISO/IEC 8878
+%D 1995
 %I International Organization for Standardization
 
 %K iso10589
@@ -3749,6 +3766,7 @@ Part 1: Protocol Specification
 %D 2000
 %I American National Standards Institute
 
+%K iso3309
 %L ISO 3309
 %R ISO/IEC 3309:1988
 %A ISO/IEC
@@ -3757,6 +3775,7 @@ Part 1: Protocol Specification
 %D 1988
 %I International Organization for Standardization
 
+%K iso4335
 %L ISO 4335
 %R ISO/IEC 4335:1988
 %A ISO/IEC
@@ -3765,6 +3784,7 @@ Part 1: Protocol Specification
 %D 1988
 %I International Organization for Standardization
 
+%K iso8649
 %L ISO 8649
 %R ISO/IEC 8649:1988
 %A ISO/IEC
@@ -3773,20 +3793,13 @@ Part 1: Protocol Specification
 %D 1988
 %I International Organization for Standardization
 
+%K iso8650
 %L ISO 8650
 %R ISO/IEC 8650:1988
 %A ISO/IEC
 %Q International Organization for Standardization
 %T Information Processing Systems \(em Open Systems Interconnection \(em Protocol Specification for the Association Control Service Element
 %D 1988
-%I International Organization for Standardization
-
-%L ISO 8881
-%R ISO/IEC 8881:1989
-%A ISO/IEC
-%Q International Organization for Standardization
-%T Information Processing Systems \(em Data Communications \(em Use of the X.25 Packet Level Protocol in Local Area Networks
-%D 1989
 %I International Organization for Standardization
 
 %L MINSHALL
@@ -4674,6 +4687,17 @@ Part 1: Protocol Specification
 %I The Internet Society
 %U http://www.ietf.org/rfc/rfc1162.txt
 
+%K rfc1223
+%L RFC1223
+%R RFC 1223
+%A Joel M. Halpern
+%T OSI CLNS and LLC1 Protocols on Network Systems HYPERchannel
+%D May 1991
+%O (Status: INFORMATIONAL)
+%Q Internet Engineering Task Force \(em Network Working Group
+%I The Internet Society
+%U http://www.ietf.org/rfc/rfc1223.txt
+
 %K rfc1237
 %L RFC1237
 %R RFC 1237
@@ -4735,6 +4759,17 @@ Part 1: Protocol Specification
 %Q Internet Engineering Task Force \(em Network Working Group
 %I The Internet Society
 %U http://www.ietf.org/rfc/rfc1706.txt
+
+%K rfc1768
+%L RFC1768
+%R RFC 1768
+%A Dave Marlow
+%T Host Group Extensions for CLNP Multicasting
+%D March 1995
+%O (Status: EXPERIMENTAL)
+%Q Internet Engineering Task Force \(em Network Working Group
+%I The Internet Society
+%U http://www.ietf.org/rfc/rfc1768.txt
 
 %K rfc1888
 %L RFC1888
